examples/test/testpolicy6478.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6478
  namespace: namespace217
spec:
  podSelector:
    matchLabels:
      key27: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value46
          key31: value43
      podSelector:
        matchLabels:
          key11: value25
          key0: value8
          key32: value7
